fix(button): решение проблемы с тултипом и заблокированной кнопкой (#920)
* fix(button): fix disabled button & tooltip

add pointer-events: none to disabled button content & wrap tooltip child with span

* fix(tooltip): add overlap div to disabled child element

#799

* style(tooltip): decrease z-index of overlap div to 2

* fix(tooltip): in responsive tooltip add overlap div above disabled child

--- a/packages/button/src/index.module.css
+++ b/packages/button/src/index.module.css
@@ -205,6 +205,10 @@ a.loading {
 
 .component:disabled {
     cursor: var(--disabled-cursor);
+
+    & * {
+        pointer-events: none;
+    }
 }
 
 /* Addons */
